--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!--title===================================-->
-<title>Lebogang Ralekoi</title>
+<title>Richie Junior</title>
 @media screen and minimum >
 
 <!--stylesheet==============================-->
